fixtures/cs-rng-01/bad/auth-parameter.ts
export function authenticate(sessionSecret: string) {
	const jitter = Math.random();
	return { sessionSecret, jitter };
}
